<resources>
    <string name="app_name">MyCalc</string>
    <string name="AC">AC</string>
    <string name="Percent">%</string>
    <string name="PlusMinus">+/-</string>
    <string name="Div">÷</string>
    <string name="Comma">,</string>
    <string name="btn0">0</string>
    <string name="calculator">CALculator</string>
    <string name="Equally">=</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="Mult">X</string>
    <string name="btn7">7</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="Minus">-</string>
    <string name="btn4">4</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="Plus">+</string>
    <string name="btn1">1</string>
    <string name="inputPanel">88888888888</string>
    <string name="IQ">IQ: %d</string>
    <string name="iq_100">IQ: 100</string>

</resources>